--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-PORT=3000
-DBURI=mongodb+srv://ram:kumar@cluster0.opvgrmj.mongodb.net/?retryWrites=true&w=majority
+#server config
+PORT=4000
+DEBUG=true
+#database information
+DBURI=mongodb+srv://ram:kumar@cluster0.opvgrmj.mongodb.net/support?retryWrites=true&w=majority
+DBURL=
+DB_NAME= 
+DB_USERNAME=
+DB_PASSWORD=
+#NODEMAILER
